--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     color: rgb(53, 172, 205);
-    background:rgb(145, 52, 221);
+    background: rgb(145, 52, 221);
 }
 header {
     border: solid 2px rgb(0, 255, 255);
+}
