--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 body {
-    color: rgb(53, 172, 205);
-    background: rgb(125, 68, 207)
-
-;
+    color:rgb(53, 172, 205);
+    background: rgb(125, 68, 207); 
+    margin: 0px;
 }
 header {
-    border: solid 2px rgb(0, 255, 255);
+    border-bottom: solid 2px rgb(0, 255, 255);
 }
