--- a/styles.css
+++ b/styles.css
@@ -4,5 +4,8 @@ body {
     margin: 0px;
 }
 header {
-    border-bottom: solid 2px rgb(0, 255, 255);
+    border-bottom: solid 2px rgb(42, 122, 228);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
 }
